--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parsonal</title>
+    <title> Parsonal Website </title>
     <link rel="stylesheet" href="style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,18 +43,18 @@
         <section class="latest-work">
         <h2>My Latest Work</h2>
         <div class="work-gallery">
-        <img src="personal-website/latest-work/work-1.png" alt="Work 1">
-        <img src="personal-website/latest-work/work-2.jpg" alt="Work 2">
-        <img src="personal-website/latest-work/work-3.jpg" alt="Work 3">
+        <img src="latest-work/work-1.png" alt="Work 1">
+        <img src="latest-work/work-2.jpg" alt="Work 2">
+        <img src="latest-work/work-3.jpg" alt="Work 3">
         </div>
         </section>
         <section class="client-testimonial">
         <h2>What Client are say</h2>
         <p class="testimonial">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since."</p>
         <p class="client-name">Bruce Henry</p>
-        <a href="mailto:programming.henry@gmail.com" class="contact-email">programming.henry@gmail.com</a>
+        <a href="mailto:mohammodhasibhasan@gmail.com" class="contact-email">mohammodhasibhasan@gmail.com</a>
         </section>
         <footer>
-        <p>Programming Henry © 2024, All rights reserved</p>
+        <p> Hasib Hasan © 2024-2026, All rights reserved</p>
         </footer>
         </div>
