--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <section class="client-testimonial">
         <h2>What Client are say</h2>
         <p class="testimonial">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since."</p>
-        <p class="client-name">Bruce Henry</p>
+        <p class="client-name">Hasib Hasan</p>
         <a href="mailto:mohammodhasibhasan@gmail.com" class="contact-email">mohammodhasibhasan@gmail.com</a>
         </section>
         <footer>
