--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Parsonal Website </title>
+    <link rel="shortcut icon" href="Images/Icon/favicon.jfif" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -41,9 +42,9 @@
         <section class="latest-work">
         <h2>My Latest Work</h2>
         <div class="work-gallery">
-        <img src="latest-work/work-1.png" alt="Work 1">
-        <img src="latest-work/work-2.jpg" alt="Work 2">
-        <img src="latest-work/work-3.jpg" alt="Work 3">
+        <img src="Images/latest-work/work-1.png" alt="Work 1">
+        <img src="Images/latest-work/work-2.jpg" alt="Work 2">
+        <img src="Images/latest-work/work-3.jpg" alt="Work 3">
         </div>
         </section>
         <section class="client-testimonial">
